--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,40 +1,52 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Kumbh Sans', sans-serif;
+}
+
 .main_container {
   max-width: 1024px;
   margin: 0 auto;
 }
 
 .menu {
-
-  border: 2px solid black;
+  border-bottom: 2px solid hsl(223, 64%, 98%);
   display: flex;
   justify-content: space-around;
   align-items: center;
-  max-height: 100px;
+  height: 100px;
+  margin-bottom: 10%;
 
     .logo {
-      height: 50%;
+      flex-grow: 1;
+      min-height: 18%;
     }
 
     ul {
       display: flex;
+      flex-grow: 2;
+
       li {
         list-style: none;
-        margin: 0 5%;
+        margin: 0 3.5%;
+        color: gray;
       }
     }
 
     .menu_right {
+      flex-grow: 6;
       display: flex;
-      justify-content: start;
+      justify-content: end;
       align-items: center;
       max-height: 300px;
 
-        .cart {
-        max-height: 20%;
-        }
+      .cart {
+      max-height: 20%;
+      }
 
-        .avatar {
-          max-height: 50px;
-        }
+      .avatar {
+        max-height: 48px;
+        margin-left: 9%;
+      }
     }
 }
