--- a/scss/styles.css
+++ b/scss/styles.css
@@ -15,7 +15,7 @@
   justify-content: space-around;
   align-items: center;
   height: 100px;
-  margin-bottom: 10%;
+  margin-bottom: 4%;
 }
 .menu .logo {
   flex-grow: 1;
@@ -43,4 +43,27 @@
 .menu .menu_right .avatar {
   max-height: 48px;
   margin-left: 9%;
+}
+
+.product_container {
+  padding: 5%;
+  display: flex;
+}
+.product_container .product_images {
+  margin-right: 10%;
+}
+.product_container .product_images .main_image img {
+  max-width: 400px;
+  max-height: 400px;
+  border-radius: 10px;
+  margin-bottom: 5%;
+}
+.product_container .product_images .thumbnails {
+  display: flex;
+  justify-content: space-between;
+}
+.product_container .product_images .thumbnails img {
+  max-width: 80px;
+  max-height: 80px;
+  border-radius: 10px;
 }
