--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,7 +15,7 @@
   justify-content: space-around;
   align-items: center;
   height: 100px;
-  margin-bottom: 10%;
+  margin-bottom: 4%;
 
     .logo {
       flex-grow: 1;
@@ -49,4 +49,36 @@
         margin-left: 9%;
       }
     }
+}
+
+
+.product_container {
+  padding: 5%;
+  display: flex;
+
+  .product_images {
+    margin-right: 10%;
+
+
+    .main_image {
+      img {
+      max-width: 400px;
+      max-height: 400px;
+      border-radius: 10px;
+      margin-bottom: 5%;
+      }
+    }
+
+    .thumbnails {
+
+      display: flex;
+      justify-content: space-between;
+
+      img {
+        max-width: 80px;
+        max-height: 80px;
+        border-radius: 10px;
+      }
+    }
+  }
 }
