--- a/scss/styles.css
+++ b/scss/styles.css
@@ -102,3 +102,48 @@
   text-decoration: line-through;
   margin-bottom: 9%;
 }
+.product_container .prodcut_details .add_to_cart_container {
+  display: flex;
+  align-items: center;
+}
+.product_container .prodcut_details .add_to_cart_container .cart_update {
+  display: flex;
+  max-width: 108px;
+  align-items: center;
+  background-color: hsl(223, 64%, 98%);
+  padding: 10px 10px;
+  border-radius: 10px;
+}
+.product_container .prodcut_details .add_to_cart_container .cart_update .minus {
+  display: inline;
+  height: 28px;
+  color: hsl(26, 100%, 55%);
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+.product_container .prodcut_details .add_to_cart_container .cart_update .zero {
+  margin: 0 28px;
+  font-weight: 700;
+}
+.product_container .prodcut_details .add_to_cart_container .cart_update .plus {
+  display: inline;
+  height: 28px;
+  color: hsl(26, 100%, 55%);
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+.product_container .prodcut_details .button_add_to_cart {
+  display: flex;
+  background-color: hsl(26, 100%, 55%);
+  color: white;
+  padding: 15px 55px;
+  border-radius: 10px;
+  font-weight: 700;
+  margin-left: 5%;
+}
+.product_container .prodcut_details .button_add_to_cart .cart2 {
+  color: white;
+  margin-right: 15px;
+  width: 16px;
+  height: 16px;
+}
