--- a/scss/styles.css
+++ b/scss/styles.css
@@ -25,10 +25,23 @@
   display: flex;
   flex-grow: 2;
 }
-.menu ul li {
-  list-style: none;
+.menu ul div {
   margin: 0 3.5%;
+}
+.menu ul div li {
+  list-style: none;
   color: gray;
+  position: relative;
+  cursor: pointer;
+}
+.menu ul div li:after {
+  content: "";
+  display: block;
+  height: 3px;
+  width: 100%;
+  background-color: hsl(26, 100%, 55%);
+  position: absolute;
+  bottom: -42px;
 }
 .menu .menu_right {
   flex-grow: 6;
