--- a/scss/styles.css
+++ b/scss/styles.css
@@ -34,7 +34,7 @@
   position: relative;
   cursor: pointer;
 }
-.menu ul div li:after {
+.menu ul div li.show_li:after {
   content: "";
   display: block;
   height: 3px;
