css avatar hover added

--- a/scss/styles.css
+++ b/scss/styles.css
@@ -52,10 +52,17 @@
 }
 .menu .menu_right .cart {
   max-height: 20%;
+  cursor: pointer;
 }
 .menu .menu_right .avatar {
   max-height: 48px;
   margin-left: 9%;
+  cursor: pointer;
+  border: 2px solid transparent;
+  border-radius: 50%;
+}
+.menu .menu_right .avatar:hover {
+  border: 2px solid hsl(26, 100%, 55%);
 }
 
 .product_container {
