--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -67,7 +67,7 @@
         }
 
         div.cart_popup {
-          // display: none;
+          display: none;
           position: absolute;
           top: 55px;
           left: -120px;
