--- a/scss/styles.css
+++ b/scss/styles.css
@@ -109,10 +109,24 @@
   display: flex;
   justify-content: space-between;
 }
-.product_container .product_images .thumbnails img {
+.product_container .product_images .thumbnails #test {
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url("../images/image-product-1-thumbnail.jpg");
   max-width: 80px;
   max-height: 80px;
   border-radius: 10px;
+  cursor: pointer;
+  background-size: cover;
+  color: white;
+  padding: 40px;
+  border: 2px solid hsl(26, 100%, 55%);
+}
+.product_container .product_images .thumbnails img.thumb_img {
+  max-height: 80px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.product_container .product_images .thumbnails img.thumb_img:hover {
+  opacity: 0.5;
 }
 .product_container .prodcut_details h2 {
   color: hsl(26, 100%, 55%);
