--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -126,14 +126,31 @@
     }
 
     .thumbnails {
-
       display: flex;
       justify-content: space-between;
 
-      img {
+      #test {
+        background-image:
+        linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)),
+        url('../images/image-product-1-thumbnail.jpg');
         max-width: 80px;
         max-height: 80px;
         border-radius: 10px;
+        cursor: pointer;
+        background-size: cover;
+        color: white;
+        padding: 40px;
+        border: 2px solid hsl(26, 100%, 55%);
+      }
+
+      img.thumb_img {
+        max-height: 80px;
+        border-radius: 10px;
+        cursor: pointer;
+
+        &:hover {
+          opacity: 0.5;
+        }
       }
     }
   }
