--- a/scss/styles.css
+++ b/scss/styles.css
@@ -1,14 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "Kumbh Sans", sans-serif;
-}
-
-.main_container {
-  max-width: 1024px;
-  margin: 0 auto;
-}
-
 .menu {
   border-bottom: 2px solid hsl(223, 64%, 98%);
   display: flex;
@@ -106,27 +95,33 @@
   margin-bottom: 5%;
 }
 .product_container .product_images .thumbnails {
+  position: relative;
   display: flex;
   justify-content: space-between;
 }
-.product_container .product_images .thumbnails #test {
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url("../images/image-product-1-thumbnail.jpg");
-  max-width: 80px;
-  max-height: 80px;
-  border-radius: 10px;
-  cursor: pointer;
-  background-size: cover;
-  color: white;
-  padding: 40px;
-  border: 2px solid hsl(26, 100%, 55%);
+.product_container .product_images .thumbnails div {
+  position: relative;
+  width: 80px;
 }
-.product_container .product_images .thumbnails img.thumb_img {
+.product_container .product_images .thumbnails div img.thumb_img {
   max-height: 80px;
   border-radius: 10px;
   cursor: pointer;
 }
-.product_container .product_images .thumbnails img.thumb_img:hover {
+.product_container .product_images .thumbnails div img.thumb_img:hover {
   opacity: 0.5;
+}
+.product_container .product_images .thumbnails div img.thumb_img.mainImg {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 2px solid hsl(26, 100%, 55%); /* Border properties */
+  opacity: 1; /* Set the opacity for the border */
+  pointer-events: none; /* Make sure the border doesn't interfere with interactions */
+  box-sizing: border-box; /* Ensure the border width doesn't affect the image dimensions */
 }
 .product_container .prodcut_details h2 {
   color: hsl(26, 100%, 55%);
@@ -207,4 +202,15 @@
   margin-right: 15px;
   width: 16px;
   height: 16px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Kumbh Sans", sans-serif;
+}
+
+.main_container {
+  max-width: 1024px;
+  margin: 0 auto;
 }
