--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,6 @@
+@import "menu";
+@import "product";
+
 * {
   margin: 0;
   padding: 0;
@@ -7,248 +10,4 @@
 .main_container {
   max-width: 1024px;
   margin: 0 auto;
-}
-
-.menu {
-  border-bottom: 2px solid hsl(223, 64%, 98%);
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 100px;
-  margin-bottom: 4%;
-
-    .logo {
-      flex-grow: 1;
-      min-height: 18%;
-    }
-
-    ul {
-      display: flex;
-      flex-grow: 2;
-
-
-      div {
-        margin: 0 3.5%;
-
-        li {
-          list-style: none;
-          color: gray;
-          position: relative;
-          cursor: pointer;
-        }
-
-        li.show_li:after {
-          content: "";
-          display: block;
-          height: 3px;
-          width: 100%;
-          background-color: hsl(26, 100%, 55%);
-          position: absolute;
-          bottom: -42px;
-        }
-      }
-
-    }
-
-    .menu_right {
-      flex-grow: 6;
-      display: flex;
-      justify-content: end;
-      align-items: center;
-      max-height: 300px;
-      position: relative;
-
-      div {
-        position: relative;
-
-        .cart {
-        max-height: 20%;
-        cursor: pointer;
-        }
-
-        div.cart_popup {
-          display: none;
-          position: absolute;
-          top: 55px;
-          left: -120px;
-          height: 174px;
-          width: 272px;
-          border-radius: 10px;
-          box-shadow: 0px 17px 25px rgba(0,0,0,0.3);
-          background-color: white;
-
-          .cart_title {
-            font-weight: 700;
-            padding: 10px 0 10px 15px;
-            border-bottom: 2px solid hsl(223, 64%, 98%);
-          }
-
-          .cart_content {
-            text-align: center;
-            margin-top: 18%;
-            font-size: 14px;
-            font-weight: 700;
-            color: hsl(219, 9%, 45%)
-          }
-        }
-      }
-
-      .avatar {
-        max-height: 48px;
-        margin-left: 9%;
-        cursor: pointer;
-        border: 2px solid transparent;
-        border-radius: 50%;
-      }
-
-      .avatar:hover {
-        border: 2px solid hsl(26, 100%, 55%);
-      }
-    }
-}
-
-
-.product_container {
-  padding: 5%;
-  display: flex;
-
-  .product_images {
-    margin-right: 10%;
-
-
-    .main_image {
-      img {
-      max-width: 400px;
-      max-height: 400px;
-      border-radius: 10px;
-      margin-bottom: 5%;
-      }
-    }
-
-    .thumbnails {
-      display: flex;
-      justify-content: space-between;
-
-      #test {
-        background-image:
-        linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)),
-        url('../images/image-product-1-thumbnail.jpg');
-        max-width: 80px;
-        max-height: 80px;
-        border-radius: 10px;
-        cursor: pointer;
-        background-size: cover;
-        color: white;
-        padding: 40px;
-        border: 2px solid hsl(26, 100%, 55%);
-      }
-
-      img.thumb_img {
-        max-height: 80px;
-        border-radius: 10px;
-        cursor: pointer;
-
-        &:hover {
-          opacity: 0.5;
-        }
-      }
-    }
-  }
-
-  .prodcut_details {
-    h2 {
-      color: hsl(26, 100%, 55%);
-      text-transform: uppercase;
-      font-size: 0.8rem;
-      margin: 10% 0 5.5% 0;
-    }
-
-    h1 {
-    font-size: 2.5rem;
-    margin-bottom: 5%;
-    }
-
-    p {
-      color:  hsl(219, 9%, 45%);
-      margin-bottom: 7%;
-    }
-
-    .price_container {
-      display: flex;
-      margin-bottom: 4%;
-
-      .price_dollar {
-        font-weight: 700;
-        font-size: 1.3rem;
-        margin-right: 14px;
-      }
-
-      .price_right {
-        color: hsl(26, 100%, 55%);
-        padding: 2px 4px;
-        background-color: hsl(25, 100%, 94%);
-        border-radius: 5px;
-      }
-    }
-
-    .stricked_price {
-      color: hsl(220, 14%, 75%);
-      font-weight: 700;
-      text-decoration: line-through;
-      margin-bottom: 9%;
-    }
-
-    .add_to_cart_container {
-      display: flex;
-      align-items: center;
-
-      .cart_update {
-        display: flex;
-        max-width: 108px;
-        align-items: center;
-        background-color: hsl(223, 64%, 98%);
-        padding: 10px 10px;
-        border-radius: 10px;
-
-        .minus {
-          display: inline;
-          height: 28px;
-          color: hsl(26, 100%, 55%);
-          font-size: 1.2rem;
-          font-weight: 700;
-        }
-
-        .zero {
-          margin: 0 28px;
-          font-weight: 700;
-        }
-
-        .plus{
-      display: inline;
-      height: 28px;
-      color: hsl(26, 100%, 55%);
-      font-size: 1.2rem;
-      font-weight: 700;
-        }
-      }
-    }
-
-    .button_add_to_cart{
-      display: flex;
-      background-color: hsl(26, 100%, 55%);
-      color: white;
-      padding: 15px 55px;
-      border-radius: 10px;
-      font-weight: 700;
-      margin-left: 5%;
-
-      .cart2 {
-        color: white;
-        margin-right: 15px;
-        width: 16px;
-        height: 16px;
-      }
-    }
-
-  }
 }
