function becomeMainImg updated + export/import module added to index.js

--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -24,6 +24,23 @@
         position: relative;
         width: 80px;
 
+        &.mainImg::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          border: 3px solid hsl(26, 100%, 55%); /* Border properties */
+          opacity: 1; /* Set the opacity for the border */
+          pointer-events: none; /* Make sure the border doesn't interfere with interactions */
+          box-sizing: border-box; /* Ensure the border width doesn't affect the image dimensions */
+          cursor: pointer;
+          border-radius: 10px;
+          height: 80px;
+          z-index: 1;
+      }
+
         img.thumb_img {
           max-height: 80px;
           border-radius: 10px;
@@ -33,18 +50,19 @@
             opacity: 0.5;
           }
 
-          &.mainImg {
-              content: "";
-              position: absolute;
-              top: 0;
-              left: 0;
-              right: 0;
-              bottom: 0;
-              border: 2px solid hsl(26, 100%, 55%); /* Border properties */
-              opacity: 1; /* Set the opacity for the border */
-              pointer-events: none; /* Make sure the border doesn't interfere with interactions */
-              box-sizing: border-box; /* Ensure the border width doesn't affect the image dimensions */
-          }
+          // &.mainImg {
+          //     content: "";
+          //     position: absolute;
+          //     top: 0;
+          //     left: 0;
+          //     right: 50%;
+          //     bottom: 0;
+          //     border: 2px solid hsl(26, 100%, 55%); /* Border properties */
+          //     opacity: 1; /* Set the opacity for the border */
+          //     pointer-events: none; /* Make sure the border doesn't interfere with interactions */
+          //     box-sizing: border-box; /* Ensure the border width doesn't affect the image dimensions */
+          //     cursor: pointer;
+          // }
         }
       }
 
