product.scss - hover thumbnail correction done

--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -47,22 +47,8 @@
           cursor: pointer;
 
           &:hover {
-            opacity: 0.5;
+            opacity: 0.5 !important;
           }
-
-          // &.mainImg {
-          //     content: "";
-          //     position: absolute;
-          //     top: 0;
-          //     left: 0;
-          //     right: 50%;
-          //     bottom: 0;
-          //     border: 2px solid hsl(26, 100%, 55%); /* Border properties */
-          //     opacity: 1; /* Set the opacity for the border */
-          //     pointer-events: none; /* Make sure the border doesn't interfere with interactions */
-          //     box-sizing: border-box; /* Ensure the border width doesn't affect the image dimensions */
-          //     cursor: pointer;
-          // }
         }
       }
 
