--- a/scss/styles.css
+++ b/scss/styles.css
@@ -180,6 +180,7 @@
   color: hsl(26, 100%, 55%);
   font-size: 1.2rem;
   font-weight: 700;
+  cursor: pointer;
 }
 .product_container .prodcut_details .add_to_cart_container .cart_update .zero {
   margin: 0 28px;
@@ -191,6 +192,7 @@
   color: hsl(26, 100%, 55%);
   font-size: 1.2rem;
   font-weight: 700;
+  cursor: pointer;
 }
 .product_container .prodcut_details .button_add_to_cart {
   display: flex;
@@ -200,6 +202,11 @@
   border-radius: 10px;
   font-weight: 700;
   margin-left: 5%;
+  cursor: pointer;
+}
+.product_container .prodcut_details .button_add_to_cart:hover {
+  opacity: 0.5;
+  box-shadow: 0px 20px 40px 10px hsl(25, 100%, 94%);
 }
 .product_container .prodcut_details .button_add_to_cart .cart2 {
   color: white;
