function to update card quantity created

--- a/scss/styles.css
+++ b/scss/styles.css
@@ -185,6 +185,7 @@
 .product_container .prodcut_details .add_to_cart_container .cart_update .zero {
   margin: 0 28px;
   font-weight: 700;
+  width: 20px;
 }
 .product_container .prodcut_details .add_to_cart_container .cart_update .plus {
   display: inline;
