--- a/scss/styles.css
+++ b/scss/styles.css
@@ -216,6 +216,17 @@
   height: 16px;
 }
 
+#myModal {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(56, 56, 56, 0.5);
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
 * {
   margin: 0;
   padding: 0;
