--- a/scss/styles.css
+++ b/scss/styles.css
@@ -217,14 +217,70 @@
 }
 
 #myModal {
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(56, 56, 56, 0.5);
+  position: fixed;
+  display: none;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(56, 56, 56, 0.8);
   z-index: 1;
+}
+#myModal .product_images {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+#myModal .product_images .close {
+  align-self: end;
+  color: white;
+  font-size: 35px;
+  cursor: pointer;
+}
+#myModal .product_images .main_image img {
+  max-width: 400px;
+  max-height: 400px;
+  border-radius: 10px;
+  margin-bottom: 5%;
+}
+#myModal .product_images .thumbnails {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  height: 65px;
+  align-self: center;
+}
+#myModal .product_images .thumbnails div {
+  position: relative;
+  width: 80px;
+  width: calc(25% - 10px);
+}
+#myModal .product_images .thumbnails div.mainImg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 3px solid hsl(26, 100%, 55%); /* Border properties */
+  opacity: 1; /* Set the opacity for the border */
+  pointer-events: none; /* Make sure the border doesn't interfere with interactions */
+  box-sizing: border-box; /* Ensure the border width doesn't affect the image dimensions */
+  cursor: pointer;
+  border-radius: 10px;
+  height: 80px;
+  z-index: 1;
+}
+#myModal .product_images .thumbnails div img.thumb_img {
+  max-height: 66px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+#myModal .product_images .thumbnails div img.thumb_img:hover {
+  opacity: 0.5 !important;
 }
 
 * {
