--- a/scss/_lightbox.scss
+++ b/scss/_lightbox.scss
@@ -57,8 +57,10 @@
           box-sizing: border-box; /* Ensure the border width doesn't affect the image dimensions */
           cursor: pointer;
           border-radius: 10px;
-          height: 80px;
+          width: 66px;
+          height: 66px;
           z-index: 1;
+          background-color: rgba(255, 255, 255, 0.8);
       }
 
         img.thumb_img {
@@ -67,7 +69,7 @@
           cursor: pointer;
 
           &:hover {
-            opacity: 0.5 !important;
+            // opacity: 0.5 !important;
           }
         }
       }
