--- a/scss/styles.css
+++ b/scss/styles.css
@@ -271,18 +271,16 @@
   box-sizing: border-box; /* Ensure the border width doesn't affect the image dimensions */
   cursor: pointer;
   border-radius: 10px;
-  height: 80px;
+  width: 66px;
+  height: 66px;
   z-index: 1;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 #myModal .product_images .thumbnails div img.thumb_img {
   max-height: 66px;
   border-radius: 10px;
   cursor: pointer;
 }
-#myModal .product_images .thumbnails div img.thumb_img:hover {
-  opacity: 0.5 !important;
-}
-
 * {
   margin: 0;
   padding: 0;
