--- a/scss/styles.css
+++ b/scss/styles.css
@@ -239,6 +239,27 @@
   font-size: 35px;
   cursor: pointer;
 }
+#myModal .product_images .main_image .prev,
+#myModal .product_images .main_image .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: blue;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  -moz-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+}
+#myModal .product_images .main_image .next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
 #myModal .product_images .main_image img {
   max-width: 400px;
   max-height: 400px;
