--- a/scss/styles.css
+++ b/scss/styles.css
@@ -245,20 +245,22 @@
   position: absolute;
   top: 50%;
   width: auto;
-  padding: 16px;
+  padding: 10px 18px 10px 20px;
   margin-top: -50px;
-  color: blue;
+  color: black;
+  background-color: white;
   font-weight: bold;
   font-size: 20px;
   transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
+  border-radius: 50%;
   -moz-user-select: none;
        user-select: none;
   -webkit-user-select: none;
+  right: 94%;
 }
 #myModal .product_images .main_image .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+  left: 94%;
+  padding: 10px 26px 10px 20px;
 }
 #myModal .product_images .main_image img {
   max-width: 400px;
