--- a/scss/styles.css
+++ b/scss/styles.css
@@ -235,7 +235,7 @@
 }
 #myModal .product_images .close {
   align-self: end;
-  color: white;
+  color: hsl(26, 100%, 55%);
   font-size: 35px;
   cursor: pointer;
 }
@@ -257,6 +257,10 @@
        user-select: none;
   -webkit-user-select: none;
   right: 94%;
+}
+#myModal .product_images .main_image .prev:hover,
+#myModal .product_images .main_image .next:hover {
+  color: hsl(26, 100%, 55%);
 }
 #myModal .product_images .main_image .next {
   left: 94%;
@@ -300,10 +304,12 @@
   background-color: rgba(255, 255, 255, 0.8);
 }
 #myModal .product_images .thumbnails div img.thumb_img {
+  position: relative;
   max-height: 66px;
   border-radius: 10px;
   cursor: pointer;
 }
+
 * {
   margin: 0;
   padding: 0;
